--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: smart_grid_view
 description: A responsive grid view that changes it's cross axis child count based on the available horizontal size.
 version: 0.1.0
-homepage:
+homepage: https://github.com/ali2236/smart_grid_view
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
